# Multi-Agent-Communication-in-Medical-Field

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  IMPLEMENTATION_CONTEXT.md  README.md  Scratchpad.md  Task Board.md  Track2_MIMIC_Credentialing_Guide.md  best_practice_writing_prompt_MIMIC.md  dissertation_for_pdf.md  dissertation_project_roadmap - Revised- MIMIC.md  engineering-methodology.md  heriot-watt_ethics_guidelines.md  literature_review_audit_2026-03-30.md  pyproject.toml  requirements-dev.txt  requirements-graphrag.txt  requirements-models.txt  requirements.txt  research_papers_literature_review.md  roadmap_changelog_2026-03-30.md  supervisor_meeting_notes.md  video_script.md
.claude/: knowledge-base.md  knowledge-nominations.md  memory.md  settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  security.yml
.streamlit/: config.toml
Daily Notes/: 062926.md
data/: README.md
docs/: graphrag-neo4j-setup.md  llm-setup.md
docs/design/: ui-spec.md
docs/plans/: build-order.md  card-08-aaf-resolver.md  card-09-walton-explanation.md  card-10a-retrieval-interface.md  card-10b-graphrag-neo4j.md  card-11-evaluation-metrics.md  card-12-baselines-ablations.md  card-13-streamlit-ui.md  cards.md
scripts/: build_graphrag_corpus.py  fetch_chestxray14_slice.py  ingest_primekg.py  setup_graphrag.sh
src/: __init__.py
src/agents/: _parsing.py  clinical.py  diagnostic.py  embeddings.py  history_risk.py  llm_client.py  ner.py  report.py  supervisor.py  treatment.py  vision.py  vlm_client.py
src/argumentation/: explanation.py  framework.py  resolver.py  schemes.py
src/data/: openi.py  (+5 more)
tests/: conftest.py  test_agent_clinical.py  test_agent_report.py  test_agent_vision.py  test_argumentation.py  test_baselines.py  test_clients.py  test_ehr_serializer.py  test_eval.py  test_explanation.py  test_kg.py  test_loaders.py  test_modality_partition.py  test_parsing.py  test_partition.py  test_pipeline.py  test_rag.py  test_report_sections.py  test_retriever.py  test_smoke.py  test_supervisor.py  test_surrogate.py  test_ui.py  test_ui_e2e.py
ui/: app.py  sample_data.py
(+29 files in other folders)
